# TesserGram

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: inline-keyboard.cpp  keyboard.cpp  main.cpp  media.cpp  receive-message.cpp  send-message.cpp
include/: debug.hpp  fetch-api.hpp  function.hpp  json-parser.hpp  json-validator.hpp  keyboard.hpp  message.hpp  node-message.hpp  polling-controller.hpp  request.hpp  telegram.hpp  type.hpp  webhook-server.hpp
src/: debug.cpp  fetch-api.cpp  function.cpp  json-parser.cpp  json-validator.cpp  polling-controller.cpp  request.cpp  telegram.cpp
src/telegram/: basic.cpp  common.cpp  keyboard.cpp  media.cpp  node-message.cpp  type.cpp  webhook-server.cpp  webhook.cpp
src/type/: callback-query.cpp  chat.cpp  media.cpp  message.cpp  user.cpp
tests/src/: test-message.cpp
